# freecad_to_gazebo

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: freecad2gazebo  freecad2gazebo.py
src/freecad_to_gazebo/: __init__.py  conversions.py  exporter.py  freecad_exporter.py  model.py
