<?xml version="1.0"?>
<package>
  <name>freecad_to_gazebo</name>
  <version>1.0.0</version>
  <description>Freecad to Gazebo/ROS exporter</description>

  <maintainer email="dawitabate2@gmail.com">Dawit Abate</maintainer>

  <license>GPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/freecad_to_gazebo</url> -->

  <author email="dawitabate2@gmail.com">Dawit Abate</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
